Partie Téléchargement, révision de l'aspect de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -87,20 +87,23 @@
     <section id="tab-accueil" class="tabs-content-item">
         <section class="grille">
         <article class="accueillogo">
-            <img src="img/logocm.png" width="240">
+            <img src="img/logocm.png" width="160">
             <p>
                 <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne...
              </p>
              <p>
-                 Egalement disponible : <a href="http://olibo.jeduque.net/ceintures-de-calcul-mental-au-college/">ceintures de calcul mental</a>  à imprimer pour le collège.
+                 Egalement disponible : dans la partie Téléchargements, des fichers de ceintures de calcul mental  à imprimer pour le collège.
              </p>
              <p>Bientôt : un <b>éditeur d'exercices</b> MathsMentales en ligne pour participer au projet.</p>
             </article>
         </section>
+        <h2 class="sg-title">École</h2>
         <section id="grille-ecole" class="grille ecole">
         </section>
+        <h2 class="sg-title">Collège</h2>
         <section id="grille-college" class="grille college">
         </section>
+        <h2 class="sg-title">Lycée</h2>
         <section id="grille-lycee" class="grille lycee">
             <article></article>
         </section>
@@ -395,12 +398,32 @@
         Ici, l'historique des activités pour pouvoir les relancer, les imprimer...
     </section>
     <section id="tab-telechargements" class="tabs-content-item" style="display: none;">
-        Ici, la section de téléchargement de MathsMentales et ses dérivés.
+        <p>MathsMentales est gratuit et placé sous licence libre apache 2.0</p>
+        <h2 class="sg-title">Code source de MathsMentales</h2>
+        <p>Le code source de MathsMentales est visibile, téléchargeable, forkable sur la page Github du développeur : <a href="https://github.com/seb-cogez/mathsmentales">https://github.com/seb-cogez/mathsmentales</a></p>
+        <p></p>
+        <p>Tous les documents ci-dessous sont sous licence libre GPL</p>
+        <h2 class="sg-title">Livrets de Ceinture de calcul mental</h2>
+        <p>Un descriptif plus approfondi est donné sur la page <a href="http://olibo.jeduque.net/ceintures-de-calcul-mental-au-college/">ceintures de calcul mental</a> de mon site.</p>
+        <ul>
+            <li><a href="docs/Livret CM 6e 2019-min.pdf">Livret d'entrainement 6e 2020</a></li>
+            <li><a href="docs/Livret CM 5e 2019.pdf">Livret d'entrainement 5e 2019</a></li>
+            <li><a href="docs/Livret CM 4e 2019_compressed.pdf">Livret d'entrainement 4e 2019</a></li>
+            <li><a href="docs/Livret CM 3e 2021.pdf">Livret d'entrainement 3e 2021</a></li>
+        </ul>
+        <h2 class="sg-title">Générateurs LibreOffice Calc de feuilles de passage</h2>
+        <p>Ces fichiers permettent de générer des fiches ainsi que leurs corrigés. Ils sont présentés de manière à avoir 3 ou 4 fiches par page. Libre à vous de générer autant de fiches que désirer, d'exporter en pdf...</p>
+        <ul>
+            <li><a href="docs/generateur CM 6e 2019.ods">Fichier générateur 6e 2020</a></li>
+            <li><a href="docs/generateur CM 5e 2019.ods">Fichier générateur 5e 2019</a></li>
+            <li><a href="docs/generateur CM 4e 2019.ods">Fichier générateur 4e 2019</a></li>
+            <li><a href="docs/generateur CM 3e 2021.ods">Fichier générateur 3e 2021</a></li>
+        </ul>
     </section>
     <section id="tab-chercher" class="tabs-content-item" style="display: none;">
         <input type="text" onkeyup="library.displayContent(this.value)" placeholder="Mot clé (au moins 3 caractères)" id="searchinput">
         <div id="resultat-chercher">
-        Ici un mini moteur de recherche pour trouver une activité
+        Dans cet onglet s'affiche le résultat d'une recherche d'activités : soit un niveau complet, soit un début de mot clé.
         </div>
     </section>
 </div>
