Ajout d'un exo de 1ère sur les angles

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
             <li><a href="#nothing">Lycée</a>
                 <ul>
                     <li onclick="library.displayContent(2,true)">2nde</li>
-                    <li onclick="library.displayContent(1,true)"><a numero="1ereES1">1ère ES1</a></li>
-                    <li onclick="library.displayContent(1,true)"><a numero="1ereES2"></a>1ère ES2</a></li>
+                    <li onclick="library.displayContent('G',true)">1ère Générale</li>
                     <li onclick="library.displayContent('T',true)">Tale</li>
                 </ul>
             </li>
