remove useless files, better historic view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <script src="js/libs/sortable/Sortable.js"></script>
     <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript"></script>
     <script src="js/libs/JSXGprah1.2.2/jsxgraphcore.js"></script>
-    <!--<script src="js/libs/JSXGraph/JessieScript.js"></script>-->
     <!--<script src="js/libs/scratchblocks/scratchblocks-v3.4-min.js"></script>-->
     <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
     <script src="js/libs/qrious.min.js"></script>
@@ -400,7 +399,7 @@
     </section>
     <section id="tab-historique" class="tabs-content-item" style="display: none;">
         Ici, l'historique des activités pour pouvoir les relancer, les imprimer...
-        <ol></ol>
+        <ol reversed></ol>
     </section>
     <section id="tab-telechargements" class="tabs-content-item" style="display: none;">
         <p>MathsMentales est gratuit et placé sous licence libre apache 2.0</p>
