--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 <body>
     <div id="app-container">
 <header>
+    <a id="btnaccueil" numero="#tab-accueil" class="logo tabs-menu-link"><img numero="#tab-accueil" src="img/android-icon-48x48.png" alt="logo" width="32" /></a>
+    <!--<input type="checkbox" id="btnnav">
+    <label for="btnnav">
+        <img src="img/iconfinder_menu-alt_134216.svg">
+     </label>-->
     <nav>
-        <a id="btnaccueil" numero="#tab-accueil" class="logo tabs-menu-link"><img numero="#tab-accueil" src="img/android-icon-48x48.png" alt="logo" /></a>
         <!--<div class="icon-menu"></div>-->
         <ul class="menu color-inverse">
             <li><a href="#nothing">Ecole</a>
@@ -88,7 +92,7 @@
             <div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="J'ai un code" size="10"><button id="btnCode" onclick="MM.takeOff()"><img src="img/iconfinder_takeoff.png"></button></div>
             <img src="img/logocm.png" width="160">
             <p>
-                <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne...
+                <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne... (<a href="old/">ancienne version</a>)
              </p>
              <p>
                  Egalement disponible dans la partie Téléchargements : des fichers de ceintures de calcul mental  à imprimer pour le collège.
