correction bug nb énoncés oublié

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne... (<a href="old/">ancienne version</a>)
              </p>
              <p>
-                 Egalement disponible dans la partie Téléchargements : des fichers de ceintures de calcul mental  à imprimer pour le collège.
+                 Dans Téléchargements : des fichers de <b>ceintures de calcul mental</b> à imprimer pour le collège.
              </p>
-             <p>Bientôt : un <b>éditeur d'exercices</b> MathsMentales en ligne pour participer au projet.</p>
+             <p><b>Contact</b> : <a href="mailto:contact@mathsmentales.net">contact@mathsmentales.net</a> pour signaler les problèmes, faire des suggestions...</p>
             </article>
         </section>
         <h2 class="sg-title">École</h2>
