Correction d'exercices et ajout d'une pause quand arrivée directe

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="js/libs/katex/katex.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/knacss.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/bulma-steps.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/mathsmentales.css?v=2" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/mathsmentales.min.css?v=2" type="text/css" media="screen" />
     <link rel="stylesheet" href="js/libs/JSXGprah1.2.2/jsxgraph.css" type="text/css" />
     <script src="js/libs/katex/katex.min.js" type="text/javascript" defer></script>
     <script src="js/libs/asciimath2tex/asciimath2tex.min.js"></script>
@@ -34,7 +34,7 @@
     <script src="js/libs/underscore-min.js"></script>
     <script src="js/libs/kas.js" defer></script>
     <script src="js/MM1toMM2.min.js"></script>
-    <script src="js/lib.mathsmentales.js?v=2" type="text/javascript" defer></script>
+    <script src="js/lib.mathsmentales.js?v=3" type="text/javascript" defer></script>
 </head>
 <body>
     <div id="app-container">
@@ -81,7 +81,7 @@
             <a numero="#tab-corrige" class="tabs-menu-link">Corrigé</a>
             <a numero="#tab-historique" class="tabs-menu-link">Historique</a>
             <a numero="#tab-telechargements" class="tabs-menu-link">Téléchargements</a>
-            <a href="https://blog.mathsmentales.net" class="tabs-menu-link">Blog</a>
+            <a href="https://blog.mathsmentales.net" class="tabs-menu-link">Blog<span class="red">*</span></a>
         </nav>
     </div>
 
