Correctif des dominos et Jai/qui a ?

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="js/libs/underscore-min.js"></script>
     <script src="js/libs/kas.js" defer></script>
     <script src="js/MM1toMM2.min.js"></script>
-    <script src="js/lib.mathsmentales.js?v=6" type="text/javascript" defer></script>
+    <script src="js/lib.mathsmentales.js?v=7" type="text/javascript" defer></script>
 </head>
 <body>
     <div id="app-container">
@@ -418,6 +418,8 @@
         <p>Le code source de MathsMentales est visibile, téléchargeable, forkable sur la page Github du développeur : <a href="https://github.com/seb-cogez/mathsmentales">https://github.com/seb-cogez/mathsmentales</a></p>
         <p></p>
         <p>Tous les documents ci-dessous sont sous licence libre GPL</p>
+        <h2 class="sg-title">Documentation de MathsMentales</h2>
+        <p>En attendant des tutos en vidéo, voici une courte documentation de MathsMentales : <a href="docs/MathsMentales documentation.pdf" target="_blank">Télécharger le pdf</a></p>
         <h2 class="sg-title">Livrets de Ceinture de calcul mental</h2>
         <p>Un descriptif plus approfondi est donné sur la page <a href="http://olibo.jeduque.net/ceintures-de-calcul-mental-au-college/">ceintures de calcul mental</a> de mon site.</p>
         <ul>
