--- a/pagetoprint.html
+++ b/pagetoprint.html
@@ -8,7 +8,7 @@
                 margin:1cm;
             }
         </style>
-        <link rel="stylesheet" href="css/print.css" type="text/css" />
+        <link rel="stylesheet" href="css/print.css?v=2" type="text/css" />
         <link href="js/libs/katex/katex.min.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="css/jsxgraph.css" type="text/css" />
         <script src="js/libs/JSXGraph/jsxgraphcore.js"></script>
